# poetry-annotator

./: .gitignore  QWEN.md  README - 副本.md  README.md  check_db.py  check_db_structure.py  config.ini.template  distribute_tasks.py  find_duplicate_poems.py  gui_launcher.py  init_database.py  main.py  plugins.7z  project_config_editor_gui.py  pyproject.toml  random_sample.py  recover_from_log_v6.py  requirements.txt  src.7z  test.txt
.progress_cache/: state_DeepSeek-R1-0528-Qwen3-8B_0734502caee7162ceb08d416f18fc081.json  state_Qwen3-235B-A22B-Instruct-2507_f2fe27c260d1aeaeb89979067312c45c.json
config/: classification_rules.yaml  cleaning_rules.yaml  config - 副本.ini  config.ini.template  config_metadata.json  emotion_categories.xml  gui_state.json  log_preferences.json  plugins.ini  system_prompt_example.txt  system_prompt_instruction.txt  中国古典诗词主题分类体系.md  中国古典诗词情感分类体系.md  交际诗主题分类体系.md
data/: sample_data.json
docs/: GUI实施计划.md  GUI设计方案.md  LLM服务适配器架构设计与实现细节.md  config_refactor_plan.md  config_structure.md  configuration_management.md  configuration_system.md  configuration_system_simple.md  data_module_complete_refactor.md  db_structure.md  integration_plan.md  plugin_system.md  plugin_system_refactor_complete.md  plugin_system_refactor_plan.md  refactor_plan.md  src_modules.md  数据库配置方式的重构.md  适配器方案的框架与示范.md  重构要求.md  面向多服务商的LLM服务适配器层级设计.md
gui/: __init__.py  app.py  config_manager.py  help_texts.py  help_window.py  i18n.py  i18n_config.py  main_window.py  script_panel_base.py  styles.py  utils.py  workers.py
poetry-annotator-data-visualizer/: .gitignore  README.md  (+3 more)
(+330 files in other folders)
